2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelop.Gui.Utils.mdp: references update

2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (FILES): Move AssemblyInfo.cs ...
	(GENERATED_FILES): ... here.

2005-06-01  John Luke  <john.luke@gmail.com>

	* FileIcons/FileIconLoader.cs: add back one try/catch
	from adrian@dreamsoftware.ro (Adrian Dinu), bug 75118

2005-06-01  John Luke  <john.luke@gmail.com>

	* FileIcons/FileIconLoader.cs (GetPixbufForFile):
	just use size instead of height, width

	* FileIcons/FileIconLoader.cs: use Gtk.IconTheme to load
	icons, simplify and size appropriately
	
2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-16  John Luke  <john.luke@gmail.com>

	* README: remove
	* MonoDevelop.Gui.Utils.dll.config.in:
	* Glue.cs: kill
	* Makefile.am: update

2005-01-26  John Luke  <john.luke@gmail.com>

	* Vfs/Vfs.cs: kill
	* Makefile.am: remove old vfs stuff in favor of Gtk#

2005-01-12  Todd Berman  <tberman@off.net>
	
	* FileIcons/FileIconLoader.cs: Workaround weird return values.
	Patch from Mart <mart@karu15.ee>

2004-12-26  John Luke  <john.luke@gmail.com>

	* Glue.cs: remove IsGtk24 which was never used, and is
	no longer useful

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-07-02  Todd Berman  <tberman@off.net>

	* FileIcons/FileIconLoader.cs: add a try catch that makes sure the
	pixbuf is loaded properly. If it isnt, return a basic pixbuf.

2004-06-30  John Luke  <jluke@cfl.rr.com>

	* Glue.cs: add IsGtk24 property for potential FileChooser hack
	* MonoDevelop.Gui.Utils.dll.config: add gtk config mapping

2004-05-28  Todd Berman  <tberman@sevenl.net>

	* MonoDevelop.Gui.Utils.prjx: update to new ICSharpCode.SharpZipLib

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* VFS/Vfs.cs: change string marshalling to make things not leak.

2004-04-12  Kristian Rietveld  <kris@gtk.org>
