@@ -15,20 +15,23 @@ DirectoryArchive/ZipDecompressor.cs \
 DirectoryArchive/Bz2Support.cs \
 DirectoryArchive/GzSupport.cs
 
+RES = \
+icons/gnome-fs-regular.png
+
 GENERATED_FILES = \
 AssemblyInfo.cs
 
 all: $(DLL)
 
-$(DLL): $(build_sources)
-	$(CSC) $(CSC_FLAGS) -out:$@ /target:library $(REFERENCES) $(build_sources)
+$(DLL): $(build_sources) $(RES)
+	$(CSC) $(CSC_FLAGS) -out:$@ /target:library $(REFERENCES) $(RES:%=/resource:%) $(build_sources)
 
 assemblydir = $(MD_ASSEMBLY_DIR)
 assembly_DATA = $(DLL)
 
 CLEANFILES = $(DLL) $(DLL).mdb
 
-EXTRA_DIST = $(FILES)
+EXTRA_DIST = $(FILES) $(RES)
 
 include $(top_srcdir)/Makefile.include
 
